# HEM

./: .gitignore  .~expData.xlsx  1Makefile  2.xlsx  AWBTree.cpp  AWBTree.h  AWBTree.txt  AWBTree_p.txt  AdaRein.cpp  AdaRein.h  AdaRein.txt  AdaRein_DSS_B.txt  AdaRein_DSS_W.txt  AdaRein_ORI.txt  AdaRein_SSS.txt  AdaRein_SSS_B.txt  AdaRein_SSS_C.txt  AdaRein_SSS_C_W.txt  BGTree.cpp  BGTree.h  BGTree.txt  BGTree1.cpp  BGTree1.h  BGTree1.txt  BGTree2.txt  BGTree_d.cpp  BGTree_d.h  BGTree_d.txt  BGTree_d_b.txt  BGTree_d_f.txt  BGTree_d_vrs.cpp  BGTree_d_vrs.h  BIOP.cpp  BIOP.h  BIOP.txt  BIOP1.cpp  BIOP1.h  BIOP1.txt  BIOP2.cpp  BIOP2.h  (+198 more)
.VSCodeCounter/2021-09-05_19-38-42/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2021-09-29_22-15-35/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2021-10-24_19-31-17/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2022-04-25_02-55-39/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
HEM_camera_ready_version/: DASFAA-2022.html
HEM_camera_ready_version/DASFAA-2022_files/: main.css  smallscreen.css  widescreen.css
pictures/: BIOP0PSTimeDistributionByBe.eps  BIOP5DDTimeDistributionByBe.eps  BIOP_DataStructure.eps  BIOP_DataStructure.pptx  BIOP_DataStructure.vsdx  DoubleReverseOptimization.vsdx  ExampleBitsetHigh.eps  ExampleBitsetHigh.vsdx  ExampleBitsets.eps  ExampleBucketList.eps  ExampleBucketList.pptx  FrameWork.eps  FrameWork.vsdx  MatchingTimeAndMemory.eps  MathType.docx  REINTimeDistribution.pptx  ReinTimeDistribution.eps  StateReductionOptimization.eps  StateReductionOptimization.vsdx  bemarking.eps  bitseti0123.wmf  exp10_construction.eps  exp10_deletion.eps  exp11_memory.eps  exp2_marking_Se.eps  exp3_n.eps  exp4_Ss.eps  exp5_Se.eps  exp6_w.eps  exp7_d.eps  exp8_alpha.eps  exp9_comprehensive.eps  exp_BIOPSR_bitOrTime.eps  matchingTime-01.eps  matchingTime.eps  origin.opju  output.docx
tmpData/: AWBTree.txt  AWBTree_p.txt  AdaRein_DSS_B.txt  AdaRein_DSS_W.txt  AdaRein_ORI.txt  AdaRein_SSS.txt  AdaRein_SSS_B.txt  AdaRein_SSS_C.txt  AdaRein_SSS_C_W.txt  BGTree.txt  BGTree1.txt  BGTree2.txt  BGTree_d.txt  BGTree_d_b.txt  BGTree_d_f.txt  HEM.txt  HEM0.txt  HEM1.txt  HEM2.txt  HEM3.txt  HEM4.txt  HEM5.txt  HEM5_256OR.txt  HEM5_RAG.txt  HEM5_RAS.txt  HEM5_VAG.txt  HEM5_VAS.txt  HEM5_avxOR.txt  HEMSC.txt  HEMSR.txt  OpIndex.txt  OpIndex2.txt  PSTB.txt  PSTree.txt  Rein.txt  Rein_F_DMFT.txt  Simple.txt  Simple2.txt  Tama.txt  bOpIndex2.txt  (+24 more)
(+151 files in other folders)
